[package]
name = "useless-looper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed.git" }
hound = "3.5.1"
cpal = "0.15.2"
anyhow = "*"
kittyaudio = "*"
smallvec = { version = "1.6", features = ["union"] }
crossbeam = "0.8"
svg = "*"
rust-embed = "8.2.0"
